--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,22 @@
+:root {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .header {
     display: flex;
     align-items: center;
     justify-content:space-between;
-    background-color:#EEEEEE
+    background-color:#EEEEEE;
+    padding: 20px;
 }
-
+.img {
+ width: 100px;
+}
 
 .navigation {
     display: flex;
+    width: 500px;
+
     
     
 }
@@ -16,7 +25,7 @@
     text-decoration: none;
     padding: 2px;
     color: black;
-    font-family:"SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+   
     
     
 } 
@@ -27,7 +36,7 @@
     color: black;
     text-shadow: black;
     padding: 2px;  
-    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;;
+    
     
     
     
